fix(Chat): Removed flickering

--- a/src/style/chat.less
+++ b/src/style/chat.less
@@ -75,13 +75,19 @@
       padding: 10px 10px 0 10px;
 
       textarea {
-        height: 60px !important;
+        min-height: 60px;
         margin-bottom: 0;
         margin-right: 10px;
+        padding: 10px;
+        transition: height .1s linear;
+
+        &:focus {
+          height: 100px;
+        }
       }
 
       input[type=submit] {
-        height: 60px;
+        height: 100%;
       }
     }
   }
